<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#60a7e7"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="80dp"
        android:text="@string/default_message"
        android:textColor="#fdfdfd"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tempDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/default_temperature"
        android:textColor="#fdfdfd"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="395dp"
        android:layout_height="223dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/weatherSymbol"
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/dunno"
            app:srcCompat="@drawable/dunno" />
    </FrameLayout>

    <Button
        android:id="@+id/changeCityButton"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/change_city"
        app:layout_constraintBottom_toTopOf="@+id/tempDisplay"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>